# code-snippets

./: CMakeLists.txt  main.cpp
lib/: application.cpp  application.hpp  module.hpp  module_list.cpp  module_list.hpp  type_list.hpp
modules/: algorithms.cpp  algorithms.hpp  bind.cpp  bind.hpp  sample.cpp  sample.hpp  units.cpp  units.hpp
modules/algorithms/: stack_queue.cpp  stack_queue.hpp
